# DynaHB

./: CMakeLists.txt  README.md
core/: CMakeLists.txt
core/graph_build/: DynamicGraphBuild.cpp  DynamicGraphBuild.h
core/protos/: dgnn_test.proto
core/resource/: CMakeLists.txt  pb11_ec.cc
core/service/: CMakeLists.txt  dgnn_client.cc  dgnn_client.h  dgnn_server.cc  dgnn_server.h  router.cc  router.h
core/store/: CMakeLists.txt  DynamicStore.cc  DynamicStore.h
core/util/: check.cc  check.h  threadUtil.cc  threadUtil.h
python/: requirements.txt
python/adgnn/context/: __init__.py  context.py
python/adgnn/distributed/: engine.py
python/adgnn/system_optimization/: batch_generate.py  partition.py
python/adgnn/util_python/: adap_batch_size.py  get_distributed_acc.py  multi_process.py  param_parser.py  test_model.py  timecounter.py
python/data_processing/: trans_spikenet_dataset.py
python/data_processing/data_generate/: generateTestGraph.py
python/data_processing/data_process/: prod_2dim_feat_dynamic_graph.py
python/data_processing/tgnn/: hashPartition.py  metisInput.py  metisOutput.py
python/example/dcrnn/: dcrnn_example.py
python/example/evolvegcn/: evolvegcno_example.py
python/example/mpnn-lstm/: mpnn-lstm_example.py
python/example/tgcn/: tgcn_example.py
python/torch_geometric_temporal/dataset/: __init__.py  encovid.py  ia_slashdot_reply_dir.py  rec_amazon_ratings.py  rec_amz_Books.py  soc_bitcoin.py  soc_flickr_growth.py  soc_youtube_growth.py  stackexch.py  test.py  twitter_tennis.py
(+10 files in other folders)
